--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,138 @@
-body {
-  background-color: #EAF6F6;
+a {
+  color: #11999E;
+  display: inline-block;
+  padding: 30px;
+  text-decoration: none;
 }
 
-h1, h3 {
+body {
+  margin: 0;
+  text-align: center;
+  font-family: 'Rubik', sans-serif;
+}
+
+h1 {
   color: #66BFBF;
+  font-family: 'Indie Flower', cursive;
+  font-size: 90px;
+  line-height: 200%;
+  margin: 50px auto 0 auto;
+}
+
+h2 {
+  color: #66BFBF;
+  font-size: 2.5rem;
+  font-weight: normal;
+}
+
+h3 {
+  color: #11999E;
+  margin-top: 0;
 }
 
 hr {
-  color: grey;
-  border-style: dotted none none;
-  border-width: 5px;
+  border: solid 10px;
+  border-bottom: 0;
+  border-style: dotted;
+  color: #EAF6F6;
   width: 5%;
+}
+
+p {
+  font-family: 'Barlow Condensed', sans-serif;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+}
+
+.bottom-container {
+  background-color: #66BFBF;
+  padding: 50px;
+}
+
+.bottom-container-paragraph {
+  color: #EAF6F6;
+}
+
+.btn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
+.chilli-img {
+
+  float: right;
+  margin: 0 0 0 30px;
+  width: 25%;
+}
+
+.code-img {
+  display: block;
+  float: left;
+  margin: 0 30px 0 0;
+  width: 25%;
+}
+
+.contact-me {
+  display: inline-block;
+  margin: 100px auto;
+  width: 40%;
+}
+
+.contact-me-paragraph {
+  margin: 50px auto;
+}
+
+.profile {
+  margin: 100px auto;
+  width: 40%;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.top-container {
+  background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
+}
+
+.skills {
+  padding: 100px 0;
+}
+
+.skill-row {
+  display: inline-block;
+  line-height: 2;
+  margin: 100px auto 30px auto;
+  text-align: left;
+  width: 50%;
 }
